# Random-Arena-Games

./: .gitignore  Dockerfile  LICENSE  README.md
experiments/: compute-exact-probability-energy.py  compute-exact-probability-parity.py  compute-exact-probability-reach.py  compute-parallel-energy.py  fpraas-energy.py  fpraas-parity.py  fpraas-reach.py  generate_mpg.py  generate_parity_games.py  plot.py  run_exact_energy.sh  run_exact_parity.sh  run_exact_reach.sh  run_fpraas_parity.sh  run_fpraas_reach.sh
experiments/results/Energy/: 101.json  102.json  201.json  202.json  203.json  204.json  302.json  (+2 more)
ggg/: CMakeLists.txt  LICENSE  README.md  mkdocs.yml
ggg/cmake/: GameGraphGymConfig.cmake.in
ggg/docs/: api_guide.md  building.md  developing.md  file_formats.md  index.md  quick_start.md  requirements.txt
ggg/docs/api/: index.md
ggg/include/libggg/: libggg.hpp
ggg/include/libggg/graphs/: discounted_graph.hpp  graph_concepts.hpp  graph_utilities.hpp  mean_payoff_graph.hpp  parity_graph.hpp  player_utilities.hpp  priority_utilities.hpp  stochastic_discounted_graph.hpp
ggg/include/libggg/solvers/: solver.hpp
ggg/include/libggg/utils/: logging.hpp  solver_wrapper.hpp
ggg/solvers/: Simplex.hpp  uintqueue.hpp
ggg/solvers/discounted/objective/: CMakeLists.txt  discounted_objective_solver.cpp  discounted_objective_solver.hpp  main.cpp
ggg/solvers/discounted/strategy/: CMakeLists.txt  discounted_strategy_solver.cpp  discounted_strategy_solver.hpp  main.cpp
ggg/solvers/discounted/value/: CMakeLists.txt  discounted_value_solver.cpp  discounted_value_solver.hpp  main.cpp
ggg/solvers/meanpayoff/msca/: CMakeLists.txt  README.md  main.cpp  msca_solver.cpp  msca_solver.hpp
ggg/solvers/meanpayoff/mse/: CMakeLists.txt  main.cpp  mse_solver.cpp  mse_solver.hpp
ggg/solvers/parity/buchi/: CMakeLists.txt  README.md  buchi_solver.cpp  buchi_solver.hpp  main.cpp
ggg/solvers/parity/priority_promotion/: CMakeLists.txt  main.cpp  priority_promotion_solver.cpp  priority_promotion_solver.hpp
ggg/solvers/parity/progressive_small_progress_measures/: CMakeLists.txt  README.md  main.cpp  progressive_small_progress_measures_solver.cpp  progressive_small_progress_measures_solver.hpp  progressive_small_progress_measures_solver.hpp.new
ggg/solvers/parity/reachability/: CMakeLists.txt  README.md  main.cpp  reachability_solver.cpp  reachability_solver.hpp  test_reachability_solver.cpp
ggg/solvers/parity/recursive/: CMakeLists.txt  main.cpp  recursive_solver.cpp  recursive_solver.hpp
ggg/solvers/stochastic_discounted/objective/: CMakeLists.txt  main.cpp  stochastic_discounted_objective_solver.cpp  stochastic_discounted_objective_solver.hpp
ggg/solvers/stochastic_discounted/strategy/: CMakeLists.txt  main.cpp  stochastic_discounted_strategy_solver.cpp  stochastic_discounted_strategy_solver.hpp
ggg/solvers/stochastic_discounted/value/: CMakeLists.txt  main.cpp  stochastic_discounted_value_solver.cpp  stochastic_discounted_value_solver.hpp
ggg/tests/: CMakeLists.txt  main.cpp
ggg/tests/libggg/graphs/: test_discounted_graph.cpp  test_mean_payoff_graph.cpp  test_parity_graph.cpp  test_player_utilities.cpp  test_priority_utilities.cpp  test_stochastic_discounted_graph.cpp
ggg/tests/test-suites/buchi/: buchi_test000.gv  buchi_test001.gv  buchi_test002.gv  buchi_test003.gv  buchi_test004.gv  buchi_test005.gv  buchi_test006.gv  buchi_test007.gv  buchi_test008.gv  buchi_test009.gv  buchi_test010.gv  buchi_test011.gv  buchi_test012.gv  buchi_test013.gv  buchi_test014.gv  buchi_test015.gv  buchi_test016.gv  buchi_test017.gv  buchi_test018.gv  buchi_test019.gv  buchi_test020.gv  buchi_test021.gv  buchi_test022.gv  buchi_test023.gv  buchi_test024.gv  buchi_test025.gv  buchi_test026.gv  buchi_test027.gv  buchi_test028.gv  buchi_test029.gv  buchi_test030.gv  buchi_test031.gv  buchi_test032.gv  buchi_test033.gv  buchi_test034.gv  buchi_test035.gv  buchi_test036.gv  buchi_test037.gv  buchi_test038.gv  buchi_test039.gv  (+110 more)
ggg/tests/test-suites/discountedpayoff/simple-uniform/: test000.dot  test001.dot  test002.dot  test003.dot  test004.dot  test005.dot  test006.dot  test007.dot  test008.dot  test009.dot  test010.dot  test011.dot  test012.dot  test013.dot  test014.dot  test015.dot  test016.dot  test017.dot  test018.dot  test019.dot  test020.dot  test021.dot  test022.dot  test023.dot  test024.dot  test025.dot  test026.dot  test027.dot  test028.dot  test029.dot  test030.dot  test031.dot  test032.dot  test033.dot  test034.dot  test035.dot  test036.dot  test037.dot  test038.dot  test039.dot  (+110 more)
ggg/tests/test-suites/meanpayoff/: test000.dot  test001.dot  test002.dot  test003.dot  test004.dot  test005.dot  test006.dot  test007.dot  test008.dot  test009.dot  test010.dot  test011.dot  test012.dot  test013.dot  test014.dot  test015.dot  test016.dot  test017.dot  test018.dot  test019.dot  test020.dot  test021.dot  test022.dot  test023.dot  test024.dot  test025.dot  test026.dot  test027.dot  test028.dot  test029.dot  test030.dot  test031.dot  test032.dot  test033.dot  test034.dot  test035.dot  test036.dot  test037.dot  test038.dot  test039.dot  (+110 more)
ggg/tests/test-suites/parity/: README.md  test000.dot  test001.dot  test002.dot  test003.dot  test004.dot  test005.dot  test006.dot  test007.dot  test008.dot  test009.dot  test010.dot  test011.dot  test012.dot  test013.dot  test014.dot  test015.dot  test016.dot  test017.dot  test018.dot  test019.dot  test020.dot  test021.dot  test022.dot  test023.dot  test024.dot  test025.dot  test026.dot  test027.dot  test028.dot  test029.dot  test030.dot  test031.dot  test032.dot  test033.dot  test034.dot  test035.dot  test036.dot  test037.dot  test038.dot  (+111 more)
ggg/tests/test-suites/stochastic_discounted/: README.md
ggg/tools/: CMakeLists.txt  benchmark_solvers.cpp  benchmark_solvers.hpp  generate_discounted_games.cpp  generate_discounted_games.hpp  generate_games.cpp  generate_games.hpp  generate_mpv_games.cpp  generate_mpv_games.hpp  generate_parity_games.cpp  generate_parity_games.hpp  generate_stochastic_discounted_games.cpp  ggg_main.cpp  list_solvers.cpp  list_solvers.hpp
(+50 files in other folders)
